Inspiration and company inspiration fixes
